# gradient-lab

./: .gitignore  AGENTS.override.md  CONTRIBUTING.md  README.md  jupyter_server_config.py  jupyterhub_config.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
docs/: README.md
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: index.ts  permissions.ts  status.ts
gradient_lab/: __init__.py  config.py  permissions.py  server.py  spawner.py
scripts/: gradient-lab.service  install.sh
src/: index.ts
tests/: test_config.py  test_server.py  test_spawner.py
